--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,14 +3,7 @@ project(graphghetti)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(graphghetti
-        main.cpp
-        vector_operations.cpp
-        vector_operations.h
-        fruchterman_reingold.cpp
-        fruchterman_reingold.h
-        graph.cpp
-        graph.h
-        bmp_processor.cpp
-        bmp_processor.h
-)
+include_directories(lib)
+add_subdirectory(lib)
+add_executable(${PROJECT_NAME} main.cpp)
+target_link_libraries(${PROJECT_NAME} lib)
